<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuMarks"
            android:title="@string/menuGrades"
            android:icon="@drawable/ic_book_black_24dp"/>
        <item
            android:id="@+id/menuSchedule"
            android:title="@string/menuSchedule"
            android:icon="@drawable/ic_date_range_black_24dp" />
        <item
            android:id="@+id/menuCalculator"
            android:title="@string/menuCalculator"
            android:icon="@drawable/ic_assessment_black_24dp" />
        <item
            android:id="@+id/menuYourGroup"
            android:title="@string/menuGroups"
            android:icon="@drawable/ic_group_black_24dp"
            android:enabled="false" />
        <item
            android:id="@+id/menuStatistics"
            android:title="@string/menuStatistics"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:enabled="false" />
        <item
            android:id="@+id/menuTimetable"
            android:title="@string/menuTimetable"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:enabled="false" />
        <item
            android:id="@+id/menuSettings"
            android:title="@string/menuSettings"
            android:icon="@drawable/ic_settings_black_24dp" />
        <item
            android:id="@+id/menuAuthor"
            android:title="@string/menuAuthor"
            android:icon="@drawable/ic_info_black_24dp" />
    </group>
</menu>