<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialogRegistrationNicknameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <android.support.design.widget.TextInputEditText
            android:maxLines="1"
            android:hint="Nickname"
            android:drawableLeft="@drawable/ic_tag_faces_black_24dp"
            android:drawablePadding="8dp"
            android:id="@+id/dialogRegistrationNicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelectDiary"/>
        <RadioButton
            android:id="@+id/dialogRegistrationIMKORadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IMKODiary"/>
        <RadioButton
            android:id="@+id/dialogRegistrationJKORadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/JKODiary"/>
    </RadioGroup>

    <Button
        android:id="@+id/dialogRegistrationSubmitButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit" />
</LinearLayout>