<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/activityLogin"
    android:layout_height="match_parent"
    xmlns:ls="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/colorPrimaryLight">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
         <View
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:background="@drawable/ic_nis_logo_white_24dp" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/activityLoginPINTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextAppearance="@style/HintTextAppearance"
            app:errorTextAppearance="@style/ErrorText"
            app:errorEnabled="true"
            android:textColorHint="#ffffff">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/activityLoginPINEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="8dp"

                android:theme="@style/LoginEditText"
                android:hint="@string/PIN"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activityLoginPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#ffffff"

            app:hintTextAppearance="@style/HintTextAppearance"
            app:errorTextAppearance="@style/ErrorText"
            app:errorEnabled="true"
            android:textColorHint="#ffffff">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activityLoginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="8dp"

                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:theme="@style/LoginEditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/activityLoginSchoolSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/schoolsList"
            android:theme="@style/RegisterSpinner"
            android:layout_marginBottom="8dp"
            app:backgroundTint="#ffffff" />


        <Switch
            android:id="@+id/activityLoginSaveSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:switchPadding="16dp"
            android:text="@string/RememberMe"
            android:textColor="#ffffff" />

        <Button
            android:enabled="false"
            android:id="@+id/activityLoginEnterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="#ffffff"
            android:text="@string/Login"/>
        <Button
            android:id="@+id/activityLoginOfflineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OfflineMode"
            android:textColor="#ffffff"
            app:backgroundTint="@color/material_red"/>
    </LinearLayout>
</FrameLayout>